--- a/uni_airdrop.Rmd
+++ b/uni_airdrop.Rmd
@@ -76,10 +76,10 @@ typical_users <- uni_airdrop %>% filter(CLAIMED_TOKEN_VOLUME <= 500 & CLAIMED_TO
 ```
 
 The vast majority, over 210,000 of the ~217,000 addresses, claimed between 300 and 500 tokens. Focusing the rest
-of this analysis on these 'typical' users of Uniswap that received the standard airdrop amount, we found these `r 100 * 210/217`% of users claimed 
+of this analysis on these 'typical' users of Uniswap (as opposed to insiders/founders) that received the standard airdrop amount, we found these `r 100 * 210/217`% of users claimed 
 `r 100 * sum(typical_users$CLAIMED_TOKEN_VOLUME)/sum(uni_airdrop$CLAIMED_TOKEN_VOLUME)`% of the airdrop.
 
-## Characteristics of Typical Users Today 
+## Characteristics of Typical Users  
 
 ```{r}
 activity_query <- {
@@ -129,17 +129,114 @@ typical_usage <- auto_paginate_query(activity_query, api_key = readLines('api_ke
 
 Looking at how the 210,000 claimants used the blockchain in the roughly 90 day 
 period between: Block 15285000 and Block 15890000, only `r nrow(typical_usage)` have 
-done any on-chain transaction in the 90 day period: this is a general `r 100*(1 - nrow(typical_usage)/nrow(uni_airdrop))`% 
-churn.
+done any on-chain transaction in the 90 day period: this is a baseline `r 100*(1 - nrow(typical_usage)/nrow(uni_airdrop))`% churn rate.
 
-Among the Uni claimants that have been active in the last 90 days
+Among the `r nrow(typical_usage)` Uni claimants that have been active in the last 90 days:
+
+- ~90% of Claimants active 18 or fewer days in last 90
+- ~99% of Claimants active 51 or fewer days in last 90
+
+```{r}
+cdf_days <- ecdf(typical_usage$N_DAYS_ACTIVE)(0:91)
+plot_ly(data = data.frame(), y = ~cdf_days, type = 'scatter', mode = 'lines+markers') %>% 
+  layout(xaxis = list(title = "Number of Days Active out of last 90"),
+         yaxis = list(title = "Cumulative % of Claimants"),
+         title = list(
+           text = "~90% of Claimants active 18 or fewer days in last 90", 
+           y = 0.95)
+  )
+
+```
+
+Similarly, 90% of claimants have 53 or fewer transactions in the last 90 days.
 
 ```{r}
 
+cdf_tx <- ecdf(typical_usage$N_TXN)(seq(from = 0, to = 200, by = 1))
+plot_ly(data = data.frame(), y = ~cdf_tx, type = 'scatter', mode = 'lines+markers') %>% 
+  layout(xaxis = list(title = "Number of Transactions in last 90 days"),
+         yaxis = list(title = "Cumulative % of Claimants"),
+         title = list(
+           text = "~90% of Claimants have 53 or less transactiosn in last 90", 
+           y = 0.95)
+  )
+
+```
+
+- `r nrow(typical_usage[typical_usage$N_DAYS_ACTIVE == max(typical_usage$N_DAYS_ACTIVE), ])` Claimants were active every single day and only these addresses exceeded 20,000 TXN in the time period.
+
+```{r}
+plot_ly(data = typical_usage, x = ~N_DAYS_ACTIVE, y = ~N_TXN, type = 'scatter', mode = 'markers') %>% 
+  layout(xaxis = list(title = "Days Active out of last 90 (91 = Max Days)"),
+         title = list(
+           text = "Some Claimants are likely bots with 1,000s of tx and activity 100% of days", 
+           y = 0.95)
+  )
 
 ```
 
 ## Use of Uniswap DEX
+
+Among the typical users, including likely bots
+
+```{r}
+
+dex_swaps_query <- {
+  "
+with airdrops AS (
+  -- Uniswap Claim 
+  SELECT LOWER('0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984') as CONTRACT_ADDRESS,'UNI' as SYMBOL, LOWER('0x2e7ba6ef') as ORIGIN_FUNCTION_SIGNATURE FROM DUAL 
+),
+
+airdrop_claimants AS (
+SELECT TX_HASH, CONTRACT_ADDRESS, FROM_ADDRESS, TO_ADDRESS, SYMBOL, ORIGIN_FUNCTION_SIGNATURE, AMOUNT, AMOUNT_USD
+  FROM ethereum.core.ez_token_transfers
+WHERE CONTRACT_ADDRESS IN (SELECT CONTRACT_ADDRESS FROM airdrops) AND 
+ORIGIN_FUNCTION_SIGNATURE IN (SELECT ORIGIN_FUNCTION_SIGNATURE FROM airdrops)
+),
+
+claimant_details AS (SELECT TO_ADDRESS as user_address, contract_address as token_contract, symbol as token_symbol, 
+COUNT(*) as n_airdrops_claimed, SUM(AMOUNT) as claimed_token_volume, SUM(AMOUNT_USD) as claimed_usd_volume 
+FROM airdrop_claimants
+GROUP BY user_address, token_contract, token_symbol),
+
+typical_users AS (
+SELECT * FROM claimant_details WHERE 
+claimed_token_volume >= 300 AND 
+claimed_token_volume <= 500
+),
+  
+trades_in AS (
+SELECT SENDER as user_address, PLATFORM as protocol, TOKEN_IN as token_contract, SYMBOL_IN as token_symbol, 
+  COUNT(*) as n_sells, SUM(AMOUNT_IN) as sell_token_volume, SUM(AMOUNT_IN_USD) as sell_usd_volume
+FROM ETHEREUM.CORE.EZ_DEX_SWAPS
+WHERE 
+  BLOCK_NUMBER >= 15285000 AND 
+  BLOCK_NUMBER <= 15890000 AND 
+  SENDER IN (SELECT user_address FROM typical_users)
+  GROUP BY user_address, protocol, token_contract, TOKEN_SYMBOL
+), 
+
+trades_out AS (
+SELECT SENDER as user_address, PLATFORM as protocol, TOKEN_OUT as token_contract, SYMBOL_OUT as token_symbol,
+  COUNT(*) as n_buys, SUM(AMOUNT_OUT) as buy_token_volume, SUM(AMOUNT_OUT_USD) as buy_usd_volume
+FROM ETHEREUM.CORE.EZ_DEX_SWAPS
+WHERE 
+  BLOCK_NUMBER >= 15285000 AND 
+  BLOCK_NUMBER <= 15890000 AND 
+  SENDER IN (SELECT user_address FROM typical_users)
+  GROUP BY user_address, protocol, token_contract, TOKEN_SYMBOL
+)
+
+SELECT user_address, protocol, token_contract, token_symbol, 
+ n_buys, n_sells, buy_token_volume, buy_usd_volume, sell_token_volume, sell_usd_volume
+FROM trades_in NATURAL FULL OUTER JOIN trades_out 
+  "
+}
+
+typical_user_dex_swaps <- auto_paginate_query(query = dex_swaps_query, api_key = readLines('api_key.txt'))
+
+```
 
 ## Change in UNI balance 
 
